# AIR

./: .gitignore  docker-compose.yml
design_document/: Feedback_tc.txt
electron-frontend/: Dockerfile.electron  info.txt  package.json
electron-frontend/restaurant-finder2/: README.md  angular.json  app.js  package.json
electron-frontend/restaurant-finder2/src/: index.html  styles.css
electron-frontend/restaurant-finder2/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts
electron-frontend/restaurant-finder2/src/app/restaurant/: restaurant.component.css  restaurant.component.html  restaurant.component.ts
electron-frontend/restaurant-finder2/src/assets/images/restaurant-types/: info.txt
electron-frontend/restaurant-finder2/src/interfaces/: RestaurantFinderRequest.ts  RestaurantFinderResponse.ts  RestaurantMetaData.ts  restaurant-meta.ts
python-backend/: Dockerfile.python  README.md  pyproject.toml  test.sh
python-backend/resources/: ner_training_dataset.json  new_tokens.json  restaurant_reviews_sample.csv
python-backend/resources/findings/: found_categories.csv  found_cities.csv  reviews_analyse.csv
python-backend/src/Analyser/: DatabaseAnalyser.py  RuntimeAnalyser.py  SentimentAnalyser.py  TrainingAnalyser.py  analyze_queries.py  main.py
python-backend/src/DineFinderAI/: README.md  main.py
python-backend/src/DineFinderAI/db/: DatabaseManager.py  storeDataInDB.py
python-backend/src/DineFinderAI/models/: DineFinder.py  FineTuning.py  RankingModel.py  SentimentModelTrainer.py  TokenAnalyser.py
python-backend/src/FastDineAPI/: README.md  app.py
python-backend/src/FastDineAPI/decorators/: serializable.py
python-backend/src/FastDineAPI/interface/request/: filters.py  queryRequest.py
python-backend/src/FastDineAPI/interface/response/: queryResponse.py  restaurant.py
python-backend/src/FastDineAPI/recomentation_system/: RestaurantNER.py  RestaurantRecommender.py
python-backend/src/FastDineAPI/recommendation_system/: RestaurantNER.py  RestaurantRecommender.py
python-backend/src/QueryGenerator/: QueryGenerator.py  README.md
python-backend/src/air-backend/: app.py
python-backend/src/air_backend/: app.py
python-backend/src/air_backend/interface/: queryRequest.py  restaurant.py
python-backend/src/interface/request/: baseInterface.py  filters.py  queryRequest.py
python-backend/src/interface/response/: queryResponse.py  restaurant.py
