[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["Matthias Hemmer <matthias.hemmer@student.tugraz.at>"]
readme = "README.md"
packages = [
            {include = "FastDineAPI", from="src"},
            {include = "DineFinderAI", from="src"},
            {include = "QueryGenerator", from="src"}
            ]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
start = "FastDineAPI.app:start"
generate = "QueryGenerator.QueryGenerator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
